--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-   background-color: #2A2550;
+   background-color: #000;
    display: flex;
    flex-direction: column;
    align-items: center;
@@ -11,12 +11,11 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 70%;
+    width: 275px;
     height: auto;
     padding: 5%;
     margin: 5%;
-    background: #fff;
-    border: solid 3px #000;
+    background: #B4FF9F;
 }
 
 .visor-conteiner{
@@ -30,9 +29,10 @@ body{
 .visor{
     background-color: #fff;
     width: 100%;
-    border: solid;
-    margin-bottom: 10%;
     height: 100%;
+    margin-bottom: 10%;
+    border: solid 1px #2ecc71;
+    border-radius: 10px;
 }
 
 .inputs-conteiner{
@@ -49,7 +49,6 @@ body{
     width: 60px;
     height: 50px;
     margin: 5px;
-    border: solid;
 }
 
 .operators-conteiner{
@@ -61,5 +60,28 @@ body{
     width: 50px;
     height: 50px;
     margin: 5px;
-    border: solid;
 }
+
+/* From uiverse.io by @adamgiebl */
+button {
+    position: relative;
+    margin: 0px 10px 10px 0px;
+    float: left;
+    border-radius: 3px;
+    font-size: 20px;
+    color: #FFF;
+    text-decoration: none;
+    background-color: #2ecc71;
+    border: none;
+    border-bottom: 5px solid #27ae60;
+    text-shadow: 0px -2px #27ae60;
+    -webkit-transition: all 0.1s;
+    transition: all 0.1s;
+   }
+   
+   button:hover, button:active {
+    -webkit-transform: translate(0px,5px);
+    -ms-transform: translate(0px,5px);
+    transform: translate(0px,5px);
+    border-bottom: 1px solid #2ecc71;
+   }
