--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,13 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 275px;
+    width: 350px;
     height: auto;
-    padding: 5%;
+    padding: 30px;
     margin: 5%;
-    background: #B4FF9F;
+    background: #B8FFF9;
+    border: solid 5px #fff;
+    border-radius: 10px;
 }
 
 .visor-conteiner{
@@ -23,16 +25,23 @@ body{
     justify-content: center;
     width: 100%;
     height: 80px;
-    margin-bottom: 5%;
+    margin-bottom: 10%;
+    color: #fff;
 }
 
 .visor{
-    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
     margin-bottom: 10%;
-    border: solid 1px #2ecc71;
-    border-radius: 10px;
+    background-color: #5468FF;
+    border: solid 3px #fff;
+    border-radius: 5px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 25px;
+    text-align: center;
 }
 
 .inputs-conteiner{
@@ -43,17 +52,20 @@ body{
 .numbers-conteiner{
     display: flex;
     flex-wrap: wrap;
+    padding-left: 5px;
 }
 
 .number{
     width: 60px;
     height: 50px;
     margin: 5px;
+    text-align: center;
 }
 
 .operators-conteiner{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .operators{
@@ -64,24 +76,28 @@ body{
 
 /* From uiverse.io by @adamgiebl */
 button {
-    position: relative;
-    margin: 0px 10px 10px 0px;
-    float: left;
-    border-radius: 3px;
-    font-size: 20px;
-    color: #FFF;
-    text-decoration: none;
-    background-color: #2ecc71;
-    border: none;
-    border-bottom: 5px solid #27ae60;
-    text-shadow: 0px -2px #27ae60;
-    -webkit-transition: all 0.1s;
-    transition: all 0.1s;
+    font-size: 18px;
+    display: inline-block;
+    outline: 0;
+    border: 0;
+    cursor: pointer;
+    will-change: box-shadow,transform;
+    background: radial-gradient( 100% 100% at 100% 0%, #89E5FF 0%, #5468FF 100% );
+    box-shadow: 0px 0.01em 0.01em rgb(45 35 66 / 40%), 0px 0.3em 0.7em -0.01em rgb(45 35 66 / 30%), inset 0px -0.01em 0px rgb(58 65 111 / 50%);
+    padding: 0 2em;
+    border-radius: 0.3em;
+    color: #fff;
+    height: 2.6em;
+    text-shadow: 0 1px 0 rgb(0 0 0 / 40%);
+    transition: box-shadow 0.15s ease, transform 0.15s ease;
    }
    
-   button:hover, button:active {
-    -webkit-transform: translate(0px,5px);
-    -ms-transform: translate(0px,5px);
-    transform: translate(0px,5px);
-    border-bottom: 1px solid #2ecc71;
+   button:hover {
+    box-shadow: 0px 0.1em 0.2em rgb(45 35 66 / 40%), 0px 0.4em 0.7em -0.1em rgb(45 35 66 / 30%), inset 0px -0.1em 0px #3c4fe0;
+    transform: translateY(-0.1em);
+   }
+   
+   button:active {
+    box-shadow: inset 0px 0.1em 0.6em #3c4fe0;
+    transform: translateY(0em);
    }
