--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,9 @@ body{
     height: auto;
     padding: 30px;
     margin: 5%;
-    background: #B8FFF9;
-    border: solid 5px #fff;
-    border-radius: 10px;
+    background: #6FDFDF;
+    border: solid 3px #fff;
+    border-radius: 40px;
 }
 
 .visor-conteiner{
