--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,11 @@ body{
     justify-content: center;
     width: 350px;
     height: auto;
-    padding: 30px;
+    padding: 15px;
     margin: 5%;
-    background: #6FDFDF;
+    background-image: linear-gradient(180deg, #2af598 0%, #009efd 100%);
     border: solid 3px #fff;
-    border-radius: 40px;
+    border-radius: 20px;
 }
 
 .visor-conteiner{
@@ -36,7 +36,7 @@ body{
     width: 100%;
     height: 100%;
     margin-bottom: 10%;
-    background-color: #5468FF;
+    background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
     border: solid 3px #fff;
     border-radius: 5px;
     font-family: 'Open Sans', sans-serif;
